--- a/FindProperty/Views/Appointments/Index.cshtml
+++ b/FindProperty/Views/Appointments/Index.cshtml
@@ -9,7 +9,7 @@
 }
 @{ if (Enumerable.Any(ViewBag.appointmentMessage))
     {
-        <div class="overflow-auto" style="height:100px">
+        <div class="overflow-auto my-4" style="height:150px">
             @foreach (var item in ViewBag.appointmentMessage)
             {
                 <div class="alert alert-info alert-dismissible fade show" role="alert">
