--- a/FindProperty/Views/Appointments/Delete.cshtml
+++ b/FindProperty/Views/Appointments/Delete.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Cancel</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to cancel this?</h3>
 <div>
     <h4>Appointment</h4>
     <hr />
