--- a/FindProperty/Views/Properties/Properties.cshtml
+++ b/FindProperty/Views/Properties/Properties.cshtml
@@ -2,27 +2,40 @@
 @model IEnumerable<FindProperty.Models.Property>
 @{
     ViewData["Title"] = "Properties";
+    var propertyType = ViewData["property_type"];
 }
-<div class="mx-3 mt-3">
+<div class="mx-3 mt-3 mb-3">
 <form asp-controller="Properties" asp-action="Search" method="get">
-    <p>
+    <div class="input-group">
 
-        @Html.DropDownList("PropertyType", "All")
+            <div class="input-group-prepend">
+            <select class="custom-select">
+                <option selected value="">All</option>
+                @foreach (var item in ViewBag.PropertyType)
+                {
+                    <option value="@item">@item</option>
+                }
+            </select>
+            </div>
+            <input type="text" class="form-control" name="searchString" placeholder="ex: Kuala Lumpur" />
+            <div class="input-group-append">
+                <input type="submit" class="btn btn-primary" value="Search" />
 
-        Search: <input type="text" class="form-control" name="searchString" placeholder="ex: Kuala Lumpur" />
-        <input type="submit" class="btn btn-primary" value="Filter" />
-    </p>
+
+            </div>
+    </div>
 </form>
 </div>
+<div class="mt-3">
 @foreach (var item in Model)
 {
     var target = "#carousel" + item.id.ToString();
     var id = "carousel" + item.id.ToString();
    
-<div class="card mb-3">
+<div class="card mb-3 mt-3">
     <a href="/Property/@item.id">
-        <div class="card-body d-flex flex-row">
-            <div class="container flex-grow-5">
+        <div class="row no-gutters">
+            <div class="col-md-6">
                 <div class="mb-1">
                     <div id="@id" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
                         <ol class="carousel-indicators">
@@ -60,17 +73,20 @@
                     </div>
                 </div>
             </div>
-            <div class="container flex-grow-5">
-                <h4 class="card-title my-3">@item.type</h4>
-                <h4 class="card-title my-3">RM @item.fee</h4>
-                <div class="my-3">
-                    <h4 mb-1 text-muted">@item.title</h4>
-                    <h5>@item.address</h5>
-                    <p class="card-subtitle my-3">@item.type | Built-up : @item.size sq. ft. | @item.furnishing</p>
+            <div class="col-md-5">
+                <div class="card-body">
+                    <h4 class="card-title my-3 text-">@item.type</h4>
+                    <h4 class="card-title my-3">RM @item.fee</h4>
+                    <div class="my-3">
+                        <h4 mb-1 text-muted">@item.title</h4>
+                        <h5>@item.address</h5>
+                        <p class="card-subtitle my-3">@item.type | Built-up : @item.size sq. ft. | @item.furnishing</p>
+                    </div>
                 </div>
             </div>
         </div>
     </a>
 </div>
  }
+
 
