--- a/FindProperty/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/FindProperty/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -38,3 +38,19 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<script>
+    var today = new Date();
+    var dd = today.getDate();
+    var mm = today.getMonth() + 1;
+    var yyyy = today.getFullYear();
+    if (dd < 10) {
+        dd = '0' + dd
+    }
+    if (mm < 10) {
+        mm = '0' + mm
+    }
+
+    today = yyyy + '-' + mm + '-' + dd;
+    document.getElementById("Input_dob").setAttribute("max", today);
+</script>
