--- a/FindProperty/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FindProperty/Areas/Identity/Pages/Account/Register.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.dob"></label>
-                <input asp-for="Input.dob" class="form-control" />
+                <input asp-for="Input.dob" class="form-control" type="date"/>
                 <span asp-validation-for="Input.dob" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -50,3 +50,19 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<script>
+    var today = new Date();
+    var dd = today.getDate();
+    var mm = today.getMonth() + 1; 
+    var yyyy = today.getFullYear();
+    if (dd < 10) {
+        dd = '0' + dd
+    }
+    if (mm < 10) {
+        mm = '0' + mm
+    }
+
+    today = yyyy + '-' + mm + '-' + dd;
+    document.getElementById("Input_dob").setAttribute("max", today);
+</script>
