--- a/FindProperty/Views/Users/Create.cshtml
+++ b/FindProperty/Views/Users/Create.cshtml
@@ -49,3 +49,19 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<script>
+    var today = new Date();
+    var dd = today.getDate();
+    var mm = today.getMonth() + 1;
+    var yyyy = today.getFullYear();
+    if (dd < 10) {
+        dd = '0' + dd
+    }
+    if (mm < 10) {
+        mm = '0' + mm
+    }
+
+    today = yyyy + '-' + mm + '-' + dd;
+    document.getElementById("dob").setAttribute("max", today);
+</script>
+
