--- a/FindProperty/Views/Users/Index.cshtml
+++ b/FindProperty/Views/Users/Index.cshtml
@@ -30,7 +30,7 @@
                 <td>@item.role</td>
                 <td>
                     <a class="btn btn-primary" role="button" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <a class="btn btn-primary" role="button" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a class="btn btn-danger" role="button" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
